Fix misalignment of icons in description lists by removing left text alignment

--- a/src/nationalarchives/utilities/lists/_index.scss
+++ b/src/nationalarchives/utilities/lists/_index.scss
@@ -246,7 +246,6 @@ ol {
         left: spacing.space(1);
 
         line-height: inherit;
-        text-align: left;
 
         @include colour.colour-font("icon-light");
       }
